test/integration/bad/lang/bad_lmpf.stan
functions {
  real my_dist_lpmf(real foo){
    return 1.0;
  }
}
